Change Log will be supplied by English only.
Latest changes might exist on the GitHub repository. Please check https://github.com/msyk/INTER-Mediator.

Ver.4.5 (in development)
- Sync with multiple clients in update/insert/delete with Pusher.
- Update FX.php (July 29, 2014) for DB_FileMaker_FX class.
- Modify setToDB() of DB_PDO.php to avoid outputting error messages in an error log file.
- [BUG FIX] The JavaScript code editor "codemirror" support plugin was modified. It works fine.

Ver.4.4 (2014/5/22)
- Multiple elements bound to the same field of the same table can synchronize in a page.
- Update samples to improve compatibility with CSP (Content Security Policy).
  (except Asset Management, Account Manager and JS Components Sample)
- Add Client-Side Calculation Page Samples for SQLite and PostgreSQL.
- Update sample_schema_mysql.txt to merge schema_data.txt of Sample_Extensible Sample.
- Avoid outputting error messages in an error log file when not specifying the 'context' key of the 'file-upload' 
  key in a definition file.
- Update the Local Context to improve compatibility with INTERMediator.pagedSize and update the "Practices".
- INTERMediatorOnPage.additionalExpandingEnclosureFinish and INTERMediatorOnPage.additionalExpandingRecordFinish
  are supported. These are programmable interfaces associated with 'post-enclosure' and 'post-repeater' in a context.
- DataConverter_MySQLDateTime class supports 'YYYY.MM.DD' date format.
- Use sessionStorage for the Local Context instead of Cookie by default.
- Cookie is now destroyed when browser is closed when the value of 'authexpired' key in a definition file is 0.
- Divide the pagination codes to INTER-Mediator-Navi.js.
- Update OME.php to sending to the email address including '+' (especially for Gmail users).
- Added class IMLibChangeEventDispatch, IMLibMouseEventDispatch, IMLibKeyEventDispatch for dispatching events.