@@ -4,3 +4,4 @@ codemirror
 npm-debug.log
 .DS_Store
 node_modules
+tcpdf
