@@ -66,6 +66,13 @@
         <td></td>
     </tr>
     <tr>
+        <td>PDF Generating</td>
+        <td><a href="Sample_pdf/list_detail_MySQL.html">show</a></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr>
         <td>Asset Management Sample</td>
         <td>
             <a href="Sample_Asset/asset_list.html">Japanese</a>
