@@ -12,6 +12,7 @@ Ver.4.5 (in development)
 - Sync with multiple clients in update/insert/delete with Pusher.
 - Update FX.php (July 29, 2014) for DB_FileMaker_FX class.
 - Modify setToDB() of DB_PDO.php to avoid outputting error messages in an error log file.
+- Added the new sample 'Sample_pdf' to demonstrate how to create pdf file with the data from database.
 - [BUG FIX] The JavaScript code editor "codemirror" support plugin was modified. It works fine.
 
 Ver.4.4 (2014/5/22)
